alpm-types/src/snapshots/url::test_source_url_parsing_failure@case_1.snap
---
source: alpm-types/src/url.rs
---
error: invalid git revision type
 | 
 | git+https://example/project#revision=v1.0.0?signed
 | ~~~~~~~~~~~~~~~~~~~~~~~~~~~~^ expected `branch`
 | 
 = while parsing:
   source url: (git+https://example/…)
   → invalid git revision type
   → expected `branch`, `commit`, `tag`
